Migrate to new block control flow syntax on Angular 20 LTS
- Run control-flow-migration schematic on Angular 20.3.15
- Convert all *ngIf and *ngFor to @if and @for block syntax
- Update 55 files with new control flow syntax
- Remain on Angular LTS version (v20.3.15)
- All build and compilation tests pass

--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
@@ -65,13 +65,15 @@
           ></app-scoreboard-display-flat>
         </div>
         <div class="sponsorLine-area">
-          <app-sponsor-display-flat
-            *ngIf="data.scoreboard_data?.is_sponsor_line || false"
-          ></app-sponsor-display-flat>
+          @if (data.scoreboard_data?.is_sponsor_line || false) {
+            <app-sponsor-display-flat
+            ></app-sponsor-display-flat>
+          }
 
-          <app-match-sponsor-line-display-flat
-            *ngIf="data.scoreboard_data?.is_match_sponsor_line || false"
-          ></app-match-sponsor-line-display-flat>
+          @if (data.scoreboard_data?.is_match_sponsor_line || false) {
+            <app-match-sponsor-line-display-flat
+            ></app-match-sponsor-line-display-flat>
+          }
         </div>
       </div>
     }
