--- a/src/app/shared/scoreboards/backs-start/backs-start.component.html
+++ b/src/app/shared/scoreboards/backs-start/backs-start.component.html
@@ -1,17 +1,23 @@
 <div class="start-roster-line">
-  <div class="startRB" *ngIf="selectedRB['rbOne']">
-    <app-player-card-roster
-      [player]="selectedRB['rbOne']"
-    ></app-player-card-roster>
-  </div>
-  <div class="startRB" *ngIf="selectedRB['rbTwo']">
-    <app-player-card-roster
-      [player]="selectedRB['rbTwo']"
-    ></app-player-card-roster>
-  </div>
-  <div class="startRB" *ngIf="selectedRB['rbThree']">
-    <app-player-card-roster
-      [player]="selectedRB['rbThree']"
-    ></app-player-card-roster>
-  </div>
+  @if (selectedRB['rbOne']) {
+    <div class="startRB">
+      <app-player-card-roster
+        [player]="selectedRB['rbOne']"
+      ></app-player-card-roster>
+    </div>
+  }
+  @if (selectedRB['rbTwo']) {
+    <div class="startRB">
+      <app-player-card-roster
+        [player]="selectedRB['rbTwo']"
+      ></app-player-card-roster>
+    </div>
+  }
+  @if (selectedRB['rbThree']) {
+    <div class="startRB">
+      <app-player-card-roster
+        [player]="selectedRB['rbThree']"
+      ></app-player-card-roster>
+    </div>
+  }
 </div>
