--- a/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
+++ b/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
@@ -49,37 +49,36 @@
     [formGroup]="playerForm"
     [tuiTextfieldLabelOutside]="true"
     style="padding: 10px"
-  >
+    >
     @if (
       players &&
       players.length &&
       playerForm &&
       playersArray &&
       playersArray.length
-    ) {
+      ) {
       <div class="table-match-roster">
         @if (players.length) {
           <div [formArrayName]="arrayName + side" class="table-body">
-            <div
-              *ngFor="
-                let playerFormGroup of playersArray.controls;
-                let i = index
-              "
+            @for (
+              playerFormGroup of playersArray.controls; track
+              playerFormGroup; let i = $index) {
+              <div
               [class]="
                 isRowEnabled(i)
                   ? 'table-row-match-roster-edit'
                   : 'table-row-match-roster'
               "
-              [formGroupName]="i"
+                [formGroupName]="i"
               [style.background-color]="
                 getFormDataByIndexAndKey(playerFormGroup, i, 'isStart')
                   ? '#98DFAF'
                   : null
               "
-            >
-              <div class="table-cell-match-roster first">
-                @if (isRowEnabled(i)) {
-                  <app-select-player-number
+                >
+                <div class="table-cell-match-roster first">
+                  @if (isRowEnabled(i)) {
+                    <app-select-player-number
                     [control]="
                       getFormControl(
                         this.playerForm,
@@ -88,24 +87,24 @@
                         arrayName + side
                       )
                     "
-                  ></app-select-player-number>
-                } @else {
-                  {{ getFormDataByIndexAndKey(playerFormGroup, i, "number") }}
-                }
-              </div>
-              <div class="table-cell-match-roster name">
-                @if (isRowEnabled(i)) {
-                  <!-- enabled -->
-                  @if (
-                    getFormDataByIndexAndKey(
+                    ></app-select-player-number>
+                  } @else {
+                    {{ getFormDataByIndexAndKey(playerFormGroup, i, "number") }}
+                  }
+                </div>
+                <div class="table-cell-match-roster name">
+                  @if (isRowEnabled(i)) {
+                    <!-- enabled -->
+                    @if (
+                      getFormDataByIndexAndKey(
                       playerFormGroup,
                       i,
                       "playerInMatchId"
-                    )
-                  ) {
-                    <app-select-player-to-match
-                      [playerList]="availablePlayersInTeamTournament"
-                      [matchId]="match.id!"
+                      )
+                      ) {
+                      <app-select-player-to-match
+                        [playerList]="availablePlayersInTeamTournament"
+                        [matchId]="match.id!"
                       [control]="
                         getFormControl(
                           this.playerForm,
@@ -114,43 +113,43 @@
                           arrayName + side
                         )
                       "
-                      (playerSelect)="onPlayerSelect($event, i)"
-                    ></app-select-player-to-match>
+                        (playerSelect)="onPlayerSelect($event, i)"
+                      ></app-select-player-to-match>
+                    } @else {
+                      <app-select-player-to-match
+                        [playerList]="availablePlayersInTeamTournament"
+                        [matchId]="match.id!"
+                      [control]="
+                        getFormControl(
+                          this.playerForm,
+                          i,
+                          'playerInMatch',
+                          arrayName + side
+                        )
+                      "
+                        (playerSelect)="onPlayerSelect($event, i)"
+                      ></app-select-player-to-match>
+                    }
                   } @else {
-                    <app-select-player-to-match
-                      [playerList]="availablePlayersInTeamTournament"
-                      [matchId]="match.id!"
-                      [control]="
-                        getFormControl(
-                          this.playerForm,
-                          i,
-                          'playerInMatch',
-                          arrayName + side
-                        )
-                      "
-                      (playerSelect)="onPlayerSelect($event, i)"
-                    ></app-select-player-to-match>
+                    <!-- disabled -->
+                    @if (
+                      getFormDataByIndexAndKey(playerFormGroup, i, "fullName");
+                      as name
+                      ) {
+                      {{ name | titlecase }}
+                    }
                   }
-                } @else {
-                  <!-- disabled -->
-                  @if (
-                    getFormDataByIndexAndKey(playerFormGroup, i, "fullName");
-                    as name
-                  ) {
-                    {{ name | titlecase }}
-                  }
-                }
-              </div>
-              <div class="table-cell-match-roster left">
-                @if (sportId) {
-                  <!-- {{ sportId }} -->
-                  @if (positions) {
-                    <!-- {{ positions }} -->
-                    @if (isRowEnabled(i)) {
-                      <app-select-player-position
-                        [positionList]="positions"
-                        [index]="i"
-                        [sportId]="sportId"
+                </div>
+                <div class="table-cell-match-roster left">
+                  @if (sportId) {
+                    <!-- {{ sportId }} -->
+                    @if (positions) {
+                      <!-- {{ positions }} -->
+                      @if (isRowEnabled(i)) {
+                        <app-select-player-position
+                          [positionList]="positions"
+                          [index]="i"
+                          [sportId]="sportId"
                         [control]="
                           getFormControl(
                             this.playerForm,
@@ -159,39 +158,39 @@
                             arrayName + side
                           )
                         "
-                      ></app-select-player-position>
-                    } @else {
-                      {{
+                        ></app-select-player-position>
+                      } @else {
+                        {{
                         getFormDataByIndexAndKey(playerFormGroup, i, "position")
-                          ?.title | uppercase
-                      }}
+                        ?.title | uppercase
+                        }}
+                      }
                     }
                   }
-                }
-              </div>
-              @if (playerFormGroup.get("playerInMatchId" + i)!.value; as id) {
-                <div
-                  class="table-cell-match-roster toggle"
-                  (click)="toggle(id)"
-                >
-                  <app-button-icon
-                    [buttonIcon]="isExpanded(id) ? '@tui.x' : '@tui.ellipsis'"
-                    [buttonSize]="'m'"
-                  ></app-button-icon>
                 </div>
-              }
-              <div
+                @if (playerFormGroup.get("playerInMatchId" + i)!.value; as id) {
+                  <div
+                    class="table-cell-match-roster toggle"
+                    (click)="toggle(id)"
+                    >
+                    <app-button-icon
+                      [buttonIcon]="isExpanded(id) ? '@tui.x' : '@tui.ellipsis'"
+                      [buttonSize]="'m'"
+                    ></app-button-icon>
+                  </div>
+                }
+                <div
                 [class]="
                   isRowEnabled(i)
                     ? 'table-cell-match-roster'
                     : 'table-cell-match-roster right span-2'
                 "
-              >
-                @if (isRowEnabled(i)) {
-                  <label tuiLabel>
-                    <input
-                      tuiCheckbox
-                      type="checkbox"
+                  >
+                  @if (isRowEnabled(i)) {
+                    <label tuiLabel>
+                      <input
+                        tuiCheckbox
+                        type="checkbox"
                       [formControl]="
                         getFormControl(
                           this.playerForm,
@@ -200,59 +199,59 @@
                           arrayName + side
                         )
                       "
-                      size="m"
-                    />is Start?
-                  </label>
-                } @else {
-                  @if (
-                    getFormDataByIndexAndKey(playerFormGroup, i, "isStart")
-                  ) {
-                    <span>In Start Roster</span>
-                  } @else {
-                    <span></span>
-                  }
-                }
-              </div>
-              @if (playerFormGroup.get("playerInMatchId" + i)!.value; as id) {
-                <tui-expand [expanded]="isExpanded(id)" class="expand">
-                  <ng-template tuiExpandContent>
-                    <div class="table-cell-match-roster actions">
-                      <div class="player-short-profile">
-                        @if (
-                          playerFormGroup.get("photoUrl" + i)!.value;
-                          as photoUrl
+                        size="m"
+                        />is Start?
+                      </label>
+                    } @else {
+                      @if (
+                        getFormDataByIndexAndKey(playerFormGroup, i, "isStart")
                         ) {
-                          <tui-avatar
-                            [src]="backendUrl + photoUrl"
-                            size="xxl"
+                        <span>In Start Roster</span>
+                      } @else {
+                        <span></span>
+                      }
+                    }
+                  </div>
+                  @if (playerFormGroup.get("playerInMatchId" + i)!.value; as id) {
+                    <tui-expand [expanded]="isExpanded(id)" class="expand">
+                      <ng-template tuiExpandContent>
+                        <div class="table-cell-match-roster actions">
+                          <div class="player-short-profile">
+                            @if (
+                              playerFormGroup.get("photoUrl" + i)!.value;
+                              as photoUrl
+                              ) {
+                              <tui-avatar
+                                [src]="backendUrl + photoUrl"
+                                size="xxl"
                             [class]="
                               isRowEnabled(i)
                                 ? 'player-photo-short-profile span-row-3'
                                 : 'player-photo-short-profile span-row-3'
                             "
-                            [round]="false"
-                            (error)="onImgError($event)"
-                          ></tui-avatar>
-                        }
-                        @if (playerFormGroup.get("dob" + i)!.value; as dob) {
-                          <span>{{ dob | date }}</span>
-                        }
-                        @if (deleteOrUpdate == "delete") {
-                          @if (
-                            getFormDataByIndexAndKey(
-                              playerFormGroup,
-                              i,
-                              "playerInMatch"
-                            );
-                            as playerInMatch
-                          ) {
-                            <app-actions-buttons
-                              [id]="id"
+                                [round]="false"
+                                (error)="onImgError($event)"
+                              ></tui-avatar>
+                            }
+                            @if (playerFormGroup.get("dob" + i)!.value; as dob) {
+                              <span>{{ dob | date }}</span>
+                            }
+                            @if (deleteOrUpdate == "delete") {
+                              @if (
+                                getFormDataByIndexAndKey(
+                                playerFormGroup,
+                                i,
+                                "playerInMatch"
+                                );
+                                as playerInMatch
+                                ) {
+                                <app-actions-buttons
+                                  [id]="id"
                               [subId]="
                                 playerInMatch?.player_team_tournament?.id
                               "
-                              [index]="i"
-                              [deleteOrUpdate]="'delete'"
+                                  [index]="i"
+                                  [deleteOrUpdate]="'delete'"
                               [item]="
                                 getFormDataByIndexAndKey(
                                   playerFormGroup,
@@ -260,86 +259,87 @@
                                   'fullName'
                                 ) | uppercase
                               "
-                              [isEnabled]="isRowEnabled(i)"
-                              [isDataChanged]="isDataChanged(i)"
+                                  [isEnabled]="isRowEnabled(i)"
+                                  [isDataChanged]="isDataChanged(i)"
                               (onEdit)="
                                 enableRowToEdit($event.index, $event.subId)
                               "
-                              (onDelete)="onDelete($event.id!)"
+                                  (onDelete)="onDelete($event.id!)"
                               (onSubmit)="
                                 onSubmit($event.action, $event.index, $event.id)
                               "
-                              (onCancel)="onCancelButtonClick()"
+                                  (onCancel)="onCancelButtonClick()"
                               (onDeleteDialog)="
                                 onDeleteButtonClick(
                                   'deleteDialogPlayer' + $event.id!
                                 )
                               "
-                            ></app-actions-buttons>
-                          } @else {
-                            <!--                            else-->
-                            <app-actions-buttons
-                              [id]="id"
-                              [index]="i"
-                              [deleteOrUpdate]="'delete'"
-                              [item]="'player'"
-                              [isEnabled]="isRowEnabled(i)"
-                              [isDataChanged]="isDataChanged(i)"
+                                ></app-actions-buttons>
+                              } @else {
+                                <!--                            else-->
+                                <app-actions-buttons
+                                  [id]="id"
+                                  [index]="i"
+                                  [deleteOrUpdate]="'delete'"
+                                  [item]="'player'"
+                                  [isEnabled]="isRowEnabled(i)"
+                                  [isDataChanged]="isDataChanged(i)"
                               (onEdit)="
                                 enableRowToEdit($event.index, $event.subId)
                               "
-                              (onDelete)="onDelete($event.id!)"
+                                  (onDelete)="onDelete($event.id!)"
                               (onSubmit)="
                                 onSubmit('edit', $event.index, $event.id)
                               "
-                              (onCancel)="onCancelButtonClick()"
+                                  (onCancel)="onCancelButtonClick()"
                               (onDeleteDialog)="
                                 onDeleteButtonClick(
                                   'deleteDialogPlayer' + $event.id!
                                 )
                               "
-                            ></app-actions-buttons>
-                          }
-                        }
-                      </div>
-                    </div>
-                  </ng-template>
-                </tui-expand>
-              } @else {
-                <app-actions-buttons
-                  [index]="i"
-                  (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
-                  (onCancel)="onCancelButtonClick()"
-                ></app-actions-buttons>
+                                ></app-actions-buttons>
+                              }
+                            }
+                          </div>
+                        </div>
+                      </ng-template>
+                    </tui-expand>
+                  } @else {
+                    <app-actions-buttons
+                      [index]="i"
+                      (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
+                      (onCancel)="onCancelButtonClick()"
+                    ></app-actions-buttons>
+                  }
+                </div>
               }
             </div>
-          </div>
-          @if (
-            !players.length ||
-            players[players.length - 1].match_player.id !== null
-          ) {
+            @if (
+              !players.length ||
+              players[players.length - 1].match_player.id !== null
+              ) {
+              <div class="table-row-match-roster final">
+                <app-add-button-on-final-tr
+                  [action]="'add player'"
+                  (onAdd)="addNewPlayer()"
+                ></app-add-button-on-final-tr>
+              </div>
+            }
+          } @else {
             <div class="table-row-match-roster final">
               <app-add-button-on-final-tr
-                [action]="'add player'"
                 (onAdd)="addNewPlayer()"
               ></app-add-button-on-final-tr>
             </div>
           }
-        } @else {
-          <div class="table-row-match-roster final">
-            <app-add-button-on-final-tr
-              (onAdd)="addNewPlayer()"
-            ></app-add-button-on-final-tr>
-          </div>
-        }
-      </div>
-    } @else {
-      No Players
-      <div class="table-row-match-roster final">
-        <app-add-button-on-final-tr
-          (onAdd)="addNewPlayer()"
-        ></app-add-button-on-final-tr>
-      </div>
-    }
-  </form>
-}
+        </div>
+      } @else {
+        No Players
+        <div class="table-row-match-roster final">
+          <app-add-button-on-final-tr
+            (onAdd)="addNewPlayer()"
+          ></app-add-button-on-final-tr>
+        </div>
+      }
+    </form>
+  }
