--- a/src/app/components/team/add-edit-team-to-tournament-table/add-edit-team-to-tournament-table.component.html
+++ b/src/app/components/team/add-edit-team-to-tournament-table/add-edit-team-to-tournament-table.component.html
@@ -3,56 +3,54 @@
   [formGroup]="teamForm"
   [tuiTextfieldLabelOutside]="true"
   style="padding: 10px"
->
+  >
   @if (teams && teams.length && teamForm && teamsArray && teamsArray.length) {
     <div class="table">
       @if (teams && teams.length) {
         <div formArrayName="teams" class="table-body">
-          <div
-            *ngFor="let teamFormGroup of teamsArray.controls; let i = index"
-            class="table-row"
-            [formGroupName]="i"
-          >
+          @for (teamFormGroup of teamsArray.controls; track teamFormGroup; let i = $index) {
             <div
-              class="table-cell first"
-              (click)="navigateToTeamItem(getFormDataByIndexAndKey(teamFormGroup, i, 'teamId'))"
-            >
-              @if (getFormDataByIndexAndKey(teamFormGroup, i, 'teamId')) {
-                @if (getFormDataByIndexAndKey(teamFormGroup, i, 'teamTitle'); as title) {
-                  {{ title | titlecase }}
+              class="table-row"
+              [formGroupName]="i"
+              >
+              <div
+                class="table-cell first"
+                (click)="navigateToTeamItem(getFormDataByIndexAndKey(teamFormGroup, i, 'teamId'))"
+                >
+                @if (getFormDataByIndexAndKey(teamFormGroup, i, 'teamId')) {
+                  @if (getFormDataByIndexAndKey(teamFormGroup, i, 'teamTitle'); as title) {
+                    {{ title | titlecase }}
+                  }
+                } @else {
+                  @if (availableTeamInSport.length > 0) {
+                    <app-select-team
+                      [teamsList]="availableTeamInSport"
+                      [sportId]="sportId"
+                      [control]="getFormControl(this.teamForm, i, 'teamInSport', 'teams')"
+                    ></app-select-team>
+                  }
                 }
-              } @else {
-                @if (availableTeamInSport.length > 0) {
-                  <app-select-team
-                    [teamsList]="availableTeamInSport"
-                    [sportId]="sportId"
-                    [control]="getFormControl(this.teamForm, i, 'teamInSport', 'teams')"
-                  ></app-select-team>
+              </div>
+              <div class="table-cell actions">
+                @if (getFormControl(this.teamForm, i, 'teamId', 'teams').value; as id) {
+                  <app-delete-button-icon
+                    [dialogId]="'removeDialog' + id "
+                  ></app-delete-button-icon>
+                  <app-remove-dialog
+                    [item]="(getFormDataByIndexAndKey(teamFormGroup, i, 'teamTitle'))"
+                    [dialogId]="'removeDialog' + id"
+                    (delete)="onDelete(id)"
+                  ></app-remove-dialog>
+                } @else {
+                  <app-actions-buttons
+                    [index]="i"
+                    (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
+                    (onCancel)="onCancelButtonClick()"
+                  ></app-actions-buttons>
                 }
-              }
-
+              </div>
             </div>
-
-            <div class="table-cell actions">
-              @if (getFormControl(this.teamForm, i, 'teamId', 'teams').value; as id) {
-                <app-delete-button-icon
-                  [dialogId]="'removeDialog' + id "
-                ></app-delete-button-icon>
-                <app-remove-dialog
-                  [item]="(getFormDataByIndexAndKey(teamFormGroup, i, 'teamTitle'))"
-                  [dialogId]="'removeDialog' + id"
-                  (delete)="onDelete(id)"
-                ></app-remove-dialog>
-              } @else {
-                <app-actions-buttons
-                  [index]="i"
-                  (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
-                  (onCancel)="onCancelButtonClick()"
-                ></app-actions-buttons>
-              }
-            </div>
-
-          </div>
+          }
           @if (!teams.length || teams[teams.length - 1].id !== null) {
             <div class="table-row final">
               <app-add-button-on-final-tr
