--- a/src/app/components/tournament/tournament-add-edit-form/tournament-add-edit-form.component.html
+++ b/src/app/components/tournament/tournament-add-edit-form/tournament-add-edit-form.component.html
@@ -5,11 +5,11 @@
     size: 'm',
   }"
   [(tuiDialog)]="open"
->
+  >
   <form
     [formGroup]="tournamentForm"
     (ngSubmit)="onSubmit(); observer.complete()"
-  >
+    >
     <p></p>
     <div class="tui-form__row">
       <tui-input formControlName="tournamentTitle">
@@ -41,31 +41,34 @@
           (reject)="onReject($event)"
           [maxFileSize]="30 * 1000 * 1000"
           label="Tournament Logo"
-        />
+          />
       </label>
 
       <tui-files>
-        <tui-file
-          *ngIf="loadedFiles$ | async as file"
-          [file]="file"
-          [showDelete]="tournamentLogoForm.enabled"
-          (remove)="removeFile()"
-        ></tui-file>
+        @if (loadedFiles$ | async; as file) {
+          <tui-file
+            [file]="file"
+            [showDelete]="tournamentLogoForm.enabled"
+            (remove)="removeFile()"
+          ></tui-file>
+        }
 
-        <tui-file
-          *ngIf="rejectedFiles$ | async as file"
-          state="error"
-          [file]="file"
-          [showDelete]="tournamentLogoForm.enabled"
-          (remove)="clearRejected()"
-        ></tui-file>
+        @if (rejectedFiles$ | async; as file) {
+          <tui-file
+            state="error"
+            [file]="file"
+            [showDelete]="tournamentLogoForm.enabled"
+            (remove)="clearRejected()"
+          ></tui-file>
+        }
 
-        <tui-file
-          *ngIf="loadingFiles$ | async as file"
-          state="loading"
-          [file]="file"
-          [showDelete]="tournamentLogoForm.enabled"
-        ></tui-file>
+        @if (loadingFiles$ | async; as file) {
+          <tui-file
+            state="loading"
+            [file]="file"
+            [showDelete]="tournamentLogoForm.enabled"
+          ></tui-file>
+        }
       </tui-files>
 
       <!--      <tui-avatar-->
@@ -75,50 +78,51 @@
       <!--        class="tui-space_top-1"-->
       <!--        [rounded]="false"-->
       <!--        [avatarUrl]="backendUrl + tournamentForm.controls['tournamentLogoUrl'].value || null"-->
-      <!--      ></tui-avatar>-->
+    <!--      ></tui-avatar>-->
 
+    @if (tournamentForm.controls['tournamentLogoUrl'].value) {
       <img
-        *ngIf="tournamentForm.controls['tournamentLogoUrl'].value"
         [src]="backendUrl + tournamentForm.controls['tournamentLogoUrl'].value"
         alt="Uploaded Tournament Logo"
         height="100px"
-      />
-
-      <tui-error
-        formControlName="tournamentLogoUrl"
-        [error]="[] | tuiFieldError | async"
-      ></tui-error>
-    </div>
-
-    @if (allSponsors) {
-      <app-select-from-list
-        [itemsList]="allSponsors"
-        [title]="'Main Sponsor'"
-        [formField]="tournamentForm.controls['tournamentMainSponsor']"
-        [stringifyFn]="stringifyTitle"
-        [nullable]="true"
-      ></app-select-from-list>
+        />
     }
 
-    @if (allSponsorLines) {
-      <app-select-from-list
-        [itemsList]="allSponsorLines"
-        [title]="'Sponsor Line'"
-        [formField]="tournamentForm.controls['tournamentSponsorLine']"
-        [stringifyFn]="stringifyTitle"
-        [nullable]="true"
-        [avatarProperty]="'logo_url'"
-      ></app-select-from-list>
-    }
+    <tui-error
+      formControlName="tournamentLogoUrl"
+      [error]="[] | tuiFieldError | async"
+    ></tui-error>
+  </div>
 
-    <p>
-      <app-create-button-in-form
-        [action]="action"
-        [disabled]="!tournamentForm.valid"
-      ></app-create-button-in-form>
-      <app-cancel-button-in-form
-        (click)="observer.complete()"
-      ></app-cancel-button-in-form>
-    </p>
-  </form>
+  @if (allSponsors) {
+    <app-select-from-list
+      [itemsList]="allSponsors"
+      [title]="'Main Sponsor'"
+      [formField]="tournamentForm.controls['tournamentMainSponsor']"
+      [stringifyFn]="stringifyTitle"
+      [nullable]="true"
+    ></app-select-from-list>
+  }
+
+  @if (allSponsorLines) {
+    <app-select-from-list
+      [itemsList]="allSponsorLines"
+      [title]="'Sponsor Line'"
+      [formField]="tournamentForm.controls['tournamentSponsorLine']"
+      [stringifyFn]="stringifyTitle"
+      [nullable]="true"
+      [avatarProperty]="'logo_url'"
+    ></app-select-from-list>
+  }
+
+  <p>
+    <app-create-button-in-form
+      [action]="action"
+      [disabled]="!tournamentForm.valid"
+    ></app-create-button-in-form>
+    <app-cancel-button-in-form
+      (click)="observer.complete()"
+    ></app-cancel-button-in-form>
+  </p>
+</form>
 </ng-template>
