--- a/src/app/shared/scoreboards/admin-forms/main-sponsor-forms/main-sponsor-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/main-sponsor-forms/main-sponsor-forms.component.html
@@ -4,66 +4,63 @@
     [isVisible$]="sponsorsFormsVisible$"
     [formName]="'sponsorsForms'"
     [buttonText]="'Main Sponsors Forms'"
-  >
+    >
   </app-toggle-visible-button>
-  <div
-    *ngIf="sponsorsFormsVisible$ | async"
-    class="main-sponsors-settings"
-  >
-    <form class="sponsors-logo-form" [formGroup]="mainSponsorForm">
-      <div class="logo-scale-size">
-        <tui-input-slider
-          formControlName="scaleTournamentLogo"
-          [max]="max"
-          [min]="min"
-          [quantum]="quantum"
-          [steps]="steps"
-        >Select Tournament Logo Size
-        </tui-input-slider>
-        <app-admin-submit-button
-          (click)="scaleLogo('tournament', data!.scoreboard_data!)"
-        ></app-admin-submit-button>
+  @if (sponsorsFormsVisible$ | async) {
+    <div
+      class="main-sponsors-settings"
+      >
+      <form class="sponsors-logo-form" [formGroup]="mainSponsorForm">
+        <div class="logo-scale-size">
+          <tui-input-slider
+            formControlName="scaleTournamentLogo"
+            [max]="max"
+            [min]="min"
+            [quantum]="quantum"
+            [steps]="steps"
+            >Select Tournament Logo Size
+          </tui-input-slider>
+          <app-admin-submit-button
+            (click)="scaleLogo('tournament', data!.scoreboard_data!)"
+          ></app-admin-submit-button>
+        </div>
+        <div class="logo-scale-size">
+          <tui-input-slider
+            formControlName="scaleMainSponsorLogo"
+            [max]="max"
+            [min]="min"
+            [quantum]="quantum"
+            [steps]="steps"
+            >Select Main Sponsor Size
+          </tui-input-slider>
+          <app-admin-submit-button
+            (click)="scaleLogo('mainSponsor', data.scoreboard_data!)"
+          ></app-admin-submit-button>
+        </div>
+      </form>
+      <div id="main-sponsors-settings-btns" class="main-sponsors-settings-btns">
+        <app-admin-down-button
+          [down]="data.scoreboard_data?.is_main_sponsor ? 'Hide' : 'Show'"
+          [distance]="'Main Sponsor Field'"
+          (click)="toggleMainSponsorVisibility(data.scoreboard_data!)"
+        ></app-admin-down-button>
+        <app-admin-down-button
+          [down]="data.scoreboard_data?.is_tournament_logo ? 'Hide' : 'Show'"
+          [distance]="'Tournament Logo Field'"
+          (click)="toggleTournamentLogoVisibility(data.scoreboard_data!)"
+        ></app-admin-down-button>
+        <app-admin-down-button
+          [down]="data.scoreboard_data?.is_sponsor_line ? 'Hide' : 'Show'"
+          [distance]="'Sponsor Line Field'"
+          (click)="toggleSponsorLineVisibility(data.scoreboard_data!)"
+        ></app-admin-down-button>
+        <app-admin-down-button
+          [down]="data.scoreboard_data?.is_match_sponsor_line ? 'Hide' : 'Show'"
+          [distance]="'Match Sponsor Line Field'"
+          (click)="toggleMatchSponsorLineVisibility(data.scoreboard_data!)"
+        ></app-admin-down-button>
       </div>
-      <div class="logo-scale-size">
-        <tui-input-slider
-          formControlName="scaleMainSponsorLogo"
-          [max]="max"
-          [min]="min"
-          [quantum]="quantum"
-          [steps]="steps"
-        >Select Main Sponsor Size
-        </tui-input-slider>
-        <app-admin-submit-button
-          (click)="scaleLogo('mainSponsor', data.scoreboard_data!)"
-        ></app-admin-submit-button>
-      </div>
-    </form>
-
-    <div id="main-sponsors-settings-btns" class="main-sponsors-settings-btns">
-      <app-admin-down-button
-        [down]="data.scoreboard_data?.is_main_sponsor ? 'Hide' : 'Show'"
-        [distance]="'Main Sponsor Field'"
-        (click)="toggleMainSponsorVisibility(data.scoreboard_data!)"
-      ></app-admin-down-button>
-
-      <app-admin-down-button
-        [down]="data.scoreboard_data?.is_tournament_logo ? 'Hide' : 'Show'"
-        [distance]="'Tournament Logo Field'"
-        (click)="toggleTournamentLogoVisibility(data.scoreboard_data!)"
-      ></app-admin-down-button>
-
-      <app-admin-down-button
-        [down]="data.scoreboard_data?.is_sponsor_line ? 'Hide' : 'Show'"
-        [distance]="'Sponsor Line Field'"
-        (click)="toggleSponsorLineVisibility(data.scoreboard_data!)"
-      ></app-admin-down-button>
-
-      <app-admin-down-button
-        [down]="data.scoreboard_data?.is_match_sponsor_line ? 'Hide' : 'Show'"
-        [distance]="'Match Sponsor Line Field'"
-        (click)="toggleMatchSponsorLineVisibility(data.scoreboard_data!)"
-      ></app-admin-down-button>
     </div>
-  </div>
+  }
 
 }
