--- a/src/app/shared/scoreboards/admin-forms/scoreboard-data-forms/scoreboard-data-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/scoreboard-data-forms/scoreboard-data-forms.component.html
@@ -5,69 +5,64 @@
     [formName]="'changeScoreBoardForms'"
     [buttonText]="'ScoreBoard Forms'">
   </app-toggle-visible-button>
-  <div
-    *ngIf="changeScoreBoardFormsVisible$ | async"
-    class="scoreboard-settings"
-  >
-    <div id="scoreboard-settings-btns" class="scoreboard-settings-btns">
-      <app-admin-down-button
-        [down]="data.scoreboard_data?.is_qtr ? 'Hide' : 'Show'"
-        [distance]="'Qtr Field'"
-        (click)="toggleQuarterVisibility(data.scoreboard_data!)"
-      ></app-admin-down-button>
-
-      <app-admin-down-button
-        [down]="data.scoreboard_data?.is_time ? 'Hide' : 'Show'"
-        [distance]="'Game Time Field'"
-        (click)="toggleGameClockVisibility(data.scoreboard_data!)"
-      ></app-admin-down-button>
-
-      <app-admin-down-button
-        [down]="data.scoreboard_data?.is_playclock ? 'Hide' : 'Show'"
-        [distance]="'Play Clock'"
-        (click)="togglePlayClockVisibility(data.scoreboard_data!)"
-      ></app-admin-down-button>
-
-      <app-admin-down-button
-        [down]="data.scoreboard_data?.is_downdistance ? 'Hide' : 'Show'"
-        [distance]="'Down&amp;Distance Field'"
-        (click)="toggleDownAndDistanceVisibility(data.scoreboard_data!)"
-      ></app-admin-down-button>
-
-    </div>
-    <div class="scoreboard-teams-colors">
-      <form
-        class="scoreboard-teams-colors-forms"
-        [formGroup]="teamColorForm"
+  @if (changeScoreBoardFormsVisible$ | async) {
+    <div
+      class="scoreboard-settings"
       >
-        <div class="team-color-settings">
-          <label class="tui-text_body-m">Home Team Game Color:</label>
-          <input
-            formControlName="colorTeamA"
-            class="team-color-picker"
-            type="color"
-            style="width: 100%"
-          />
-          <app-admin-submit-button
-            (click)="updateTeamColor('a', data.scoreboard_data!)"
-          ></app-admin-submit-button>
-
-        </div>
-        <div class="team-color-settings">
-          <label class="tui-text_body-m">Away Team Game Color:</label>
-          <input
-            formControlName="colorTeamB"
-            class="team-color-picker"
-            type="color"
-            style="width: 100%"
+      <div id="scoreboard-settings-btns" class="scoreboard-settings-btns">
+        <app-admin-down-button
+          [down]="data.scoreboard_data?.is_qtr ? 'Hide' : 'Show'"
+          [distance]="'Qtr Field'"
+          (click)="toggleQuarterVisibility(data.scoreboard_data!)"
+        ></app-admin-down-button>
+        <app-admin-down-button
+          [down]="data.scoreboard_data?.is_time ? 'Hide' : 'Show'"
+          [distance]="'Game Time Field'"
+          (click)="toggleGameClockVisibility(data.scoreboard_data!)"
+        ></app-admin-down-button>
+        <app-admin-down-button
+          [down]="data.scoreboard_data?.is_playclock ? 'Hide' : 'Show'"
+          [distance]="'Play Clock'"
+          (click)="togglePlayClockVisibility(data.scoreboard_data!)"
+        ></app-admin-down-button>
+        <app-admin-down-button
+          [down]="data.scoreboard_data?.is_downdistance ? 'Hide' : 'Show'"
+          [distance]="'Down&amp;Distance Field'"
+          (click)="toggleDownAndDistanceVisibility(data.scoreboard_data!)"
+        ></app-admin-down-button>
+      </div>
+      <div class="scoreboard-teams-colors">
+        <form
+          class="scoreboard-teams-colors-forms"
+          [formGroup]="teamColorForm"
           >
-          <app-admin-submit-button
-            (click)="updateTeamColor('b', data.scoreboard_data!)"
-          ></app-admin-submit-button>
-
-        </div>
-      </form>
+          <div class="team-color-settings">
+            <label class="tui-text_body-m">Home Team Game Color:</label>
+            <input
+              formControlName="colorTeamA"
+              class="team-color-picker"
+              type="color"
+              style="width: 100%"
+              />
+            <app-admin-submit-button
+              (click)="updateTeamColor('a', data.scoreboard_data!)"
+            ></app-admin-submit-button>
+          </div>
+          <div class="team-color-settings">
+            <label class="tui-text_body-m">Away Team Game Color:</label>
+            <input
+              formControlName="colorTeamB"
+              class="team-color-picker"
+              type="color"
+              style="width: 100%"
+              >
+            <app-admin-submit-button
+              (click)="updateTeamColor('b', data.scoreboard_data!)"
+            ></app-admin-submit-button>
+          </div>
+        </form>
+      </div>
     </div>
-  </div>
+  }
 
 }
