--- a/src/app/shared/scoreboards/lb-starts/lb-starts.component.html
+++ b/src/app/shared/scoreboards/lb-starts/lb-starts.component.html
@@ -1,18 +1,26 @@
 <div class="start-roster-line">
-  <div class="startW" *ngIf="selectedLB['s']">
-    <app-player-card-roster [player]="selectedLB['s']"></app-player-card-roster>
-  </div>
-  <div class="startMLB" *ngIf="selectedLB['mlb']">
-    <app-player-card-roster
-      [player]="selectedLB['mlb']"
-    ></app-player-card-roster>
-  </div>
-  <div class="startMLBTwo" *ngIf="selectedLB['mlbTwo']">
-    <app-player-card-roster
-      [player]="selectedLB['mlbTwo']"
-    ></app-player-card-roster>
-  </div>
-  <div class="startW" *ngIf="selectedLB['w']">
-    <app-player-card-roster [player]="selectedLB['w']"></app-player-card-roster>
-  </div>
+  @if (selectedLB['s']) {
+    <div class="startW">
+      <app-player-card-roster [player]="selectedLB['s']"></app-player-card-roster>
+    </div>
+  }
+  @if (selectedLB['mlb']) {
+    <div class="startMLB">
+      <app-player-card-roster
+        [player]="selectedLB['mlb']"
+      ></app-player-card-roster>
+    </div>
+  }
+  @if (selectedLB['mlbTwo']) {
+    <div class="startMLBTwo">
+      <app-player-card-roster
+        [player]="selectedLB['mlbTwo']"
+      ></app-player-card-roster>
+    </div>
+  }
+  @if (selectedLB['w']) {
+    <div class="startW">
+      <app-player-card-roster [player]="selectedLB['w']"></app-player-card-roster>
+    </div>
+  }
 </div>
